# orbyx1.0

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cli.py  config.json  conjunction-warning.csv  docker-compose.yml  multi_conjunction_checker.py  orbit_tracker.py  pyproject.toml  render.yaml  requirements.txt  satellite_map_2d.py  satellite_map_3d.py  satellite_positions.csv  satellite_sky_view.py  utils.py
.github/workflows/: ci.yml
.streamlit/: config.toml
documentation/: 0_Abstract.md  10_Implementation_Code.md  11_Result.md  12_Limitations.md  13_Conclusion.md  14_Future_Enhancement.md  15_References.md  1_Introduction.md  2_Existing_Model.md  3_Project_Overview.md  4_Target_Audience.md  5_System_Requirements.md  6_Technologies_Used.md  7_System_Architecture.md  8_Website_Flowchart.md  9_Features_Implemented.md
frontend/: app.py
frontend/pages/: 01_dashboard.py  02_collision_analysis.py  03_visibility.py  04_3d_view.py  05_reports.py
rust_engine/: Cargo.toml
rust_engine/python/: rust_engine.pyi
rust_engine/src/: lib.rs
src/: __init__.py  config.py  logging_config.py
src/api/: main.py
src/database/: manager.py  models.py
src/engine/: cache.py  collision_detector.py  orbit_propagator.py  visibility_calculator.py
src/utils/: celestrak_client.py  export.py  (+2 more)
static/: satellite_sky_view.html
templates/: index.html
tests/: conftest.py  test_api.py  test_celestrak_client.py  test_cli.py  test_collision_detector.py  test_database.py  test_export.py  test_orbit_propagator.py  test_tle_parser.py  test_visibility.py
tle_cache/: active_catalog.txt
(+4 files in other folders)
