[package]
name = "satellite_rs"
version = "1.0.0"
edition = "2021"
description = "High-performance satellite collision detection engine"

[lib]
name = "satellite_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
nalgebra = "0.32"
